--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.*/*.sqlite3
+
 # Django #
 *.log
 *.pot
@@ -125,6 +127,5 @@ env
 local_settings.py
 _local_settings.py
 gunicorn-error-log
-db.sqlite3
 db copy.sqlite3
 static/
