--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
     command: sh -c "playwright install chromium &&
+     playwright install-deps &&
      python manage.py migrate && 
      python manage.py runserver 0.0.0.0:3000"
     restart: always
     volumes:
       - .:/code
     ports:
-      - 3000:3000
+      - 3100:3000
