--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "playwright install chromium &&
-     playwright install-deps &&
+    command: sh -c "
      python manage.py migrate && 
-     python manage.py runserver 0.0.0.0:3000"
+     python manage.py runserver 0.0.0.0:3001"
     restart: always
     volumes:
       - .:/code
     ports:
-      - 3100:3000
+      - 3001:3001
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 1G
